fixed alignment in members cards

--- a/styles/About.css
+++ b/styles/About.css
@@ -40,7 +40,7 @@
     /* White background */
 }
 
-.about-follow-us .about-follow-us-title{
+.about-follow-us .about-follow-us-title {
     margin-bottom: 12px;
 }
 
@@ -114,6 +114,12 @@
     height: 100%;
     justify-content: space-between;
     /* Distribute content vertically */
+}
+
+.about-community .member-card-content .member-card-role {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .about-community .member-avatar-wrapper {
